Write logs to file, map logs directory to host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: cookie-crafter-backend:latest
     networks:
       - cookie-crafter-network
+    volumes:
+      - /home/albina/logs:/app/logs
 
   cookie-crafter-frontend:
     image: cookie-crafter-frontend:latest
