--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 services:
   cookie-crafter-backend:
-    image: cookie-crafter-backend:latest
+    image: ghcr.io/albina0104/cookie-crafter-backend:latest
     networks:
       - cookie-crafter-network
     volumes:
       - /home/albina/logs:/app/logs
 
   cookie-crafter-frontend:
-    image: cookie-crafter-frontend:latest
+    image: ghcr.io/albina0104/cookie-crafter-frontend:latest
     networks:
       - cookie-crafter-network
 
   my-apache:
-    image: my-apache:latest
+    image: ghcr.io/albina0104/my-apache:latest
     ports:
       - '80:80'
       - '443:443'
