--- a/.github/workflows/deploy-all.yml
+++ b/.github/workflows/deploy-all.yml
@@ -5,6 +5,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
+  SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 
 jobs:
   deploy-all:
@@ -19,18 +20,22 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup SSH
+        env:
+          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/cookie-crafter-ssh
-          chmod 600 ~/.ssh/cookie-crafter-ssh
           ssh-keyscan -H ${{ secrets.SERVER_DOMAIN }} >> ~/.ssh/known_hosts
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          echo "echo $SSH_PASSPHRASE" > ~/.ssh_askpass && chmod +x ~/.ssh_askpass
+          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | DISPLAY=None SSH_ASKPASS=~/.ssh_askpass ssh-add - > /dev/null
 
       - name: Upload docker-compose file to server
-        run: scp -i ~/.ssh/cookie-crafter-ssh docker-compose.yml ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_DOMAIN }}:/home/${{ secrets.SERVER_USERNAME }}/cookie-crafter/
+        run: scp docker-compose.yml ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_DOMAIN }}:/home/${{ secrets.SERVER_USERNAME }}/cookie-crafter/
 
       - name: Deploy
         run: |
-          ssh -i ~/.ssh/cookie-crafter-ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_DOMAIN }} << 'EOF'
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_DOMAIN }} << 'EOF'
             echo "${{ secrets.GHCR_ACCESS_TOKEN }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
             cd /home/${{ secrets.SERVER_USERNAME }}/cookie-crafter
             docker compose down
